# cloud_receiver

cloud_reciever/: CMakeLists.txt  package.xml  superodom.start.yaml
cloud_reciever/launch/: cloud_receiver.launch  ledger_demo.launch
cloud_reciever/src/: receive_clouds.cpp
